--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,24 +14,24 @@
         android:label="DGFAB"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Buyer_Main_Navigation"></activity>
-        <activity android:name=".MainActivity" />
-        <activity android:name=".Activities_Dashboards.ProfileActivty" />
+        <activity android:name="ics.dynamic.dgfab.Buyer_Main_Navigation"></activity>
+        <activity android:name="ics.dynamic.dgfab.MainActivity" />
+        <activity android:name="ics.dynamic.dgfab.Activities_Dashboards.ProfileActivty" />
         <activity
-            android:name=".Activities_Dashboards.DashBoard"
+            android:name="ics.dynamic.dgfab.Activities_Dashboards.DashBoard"
             android:label="@string/title_activity_dash_board"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".Activities.LogandReg.Registration_Step_3" />
+        <activity android:name="ics.dynamic.dgfab.LogandReg.Registration_Step_3" />
 
-        <activity android:name=".Activities.LogandReg.Registration_Step_2" />
-        <activity android:name=".Activities.LogandReg.Registration_Step_1" />
+        <activity android:name="ics.dynamic.dgfab.LogandReg.Registration_Step_2" />
+        <activity android:name="ics.dynamic.dgfab.LogandReg.Registration_Step_1" />
 
         <uses-library
             android:name="org.apache.http.legacy"
             android:required="false" />
 
         <activity
-            android:name=".Splash_DGFAB"
+            android:name="ics.dynamic.dgfab.Splash_DGFAB"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar">
