--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,4 +71,5 @@ dependencies {
     implementation 'com.android.support:multidex:1.0.1'
     implementation 'org.apache.httpcomponents:httpclient-android:4.3.5'
     testImplementation 'junit:junit:4.12'
+    implementation 'devs.mulham.horizontalcalendar:horizontalcalendar:1.3.4'
 }
