--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,8 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/logo"
+        android:logo="@drawable/logo"
         android:label="DGFAB"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
